--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tentang Kami - English Mastery Course</title>
+    <title>Tentang Kami - Arwan Edu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -117,7 +117,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/logo.png" alt="English Mastery Course Logo">
+                <img src="arwan_edu.jpg" alt="English Mastery Course Logo">
                 <h1>English Mastery Course</h1>
             </div>
             <nav>
@@ -145,7 +145,7 @@
     <main>
         <section class="about-section">
             <div class="container">
-                <h2>Tentang English Mastery Course</h2>
+                <h2>Tentang Arwan Edu</h2>
                 <div class="about-content">
                     <div class="about-text">
                         <h3>Sejarah Kami</h3>
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 English Mastery Course. All rights reserved.</p>
+                <p>&copy; 2025 Arwan Edu. All rights reserved.</p>
             </div>
         </div>
     </footer>
