--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="logo">
                 <img src="arwan_edu.jpg" alt="English Mastery Course Logo">
-                <h1>English Mastery Course</h1>
+                <h1>Arwan Edu</h1>
             </div>
             <nav>
                 <ul>
