--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
                         </ul>
                     </div>
                     <div class="about-image">
-                        <img src="images/about_us_illustration.jpg" alt="About Us Illustration">
+                        <img src="about_us.jpg" alt="About Us Illustration">
                     </div>
                 </div>
             </div>
@@ -206,7 +206,7 @@
                 <div class="footer-section contact-info">
                     <h3>Kontak Kami</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Jl. Contoh No. 123, Jakarta Utara, Indonesia</p>
-                    <p><i class="fas fa-phone"></i> <a href="tel:+628123456789">+62 812-3456-789</a></p>
+                    <p><i class="fas fa-phone"></i> <a href="tel:+6285798024920">+62 857-9802-4920</a></p>
                     <p><i class="fas fa-envelope"></i> info@englishmastery.com</p>
                 </div>
                 <div class="footer-section social">
