--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
                         </ul>
                     </div>
                     <div class="about-image">
-                        <img src="about_us.jpg" alt="About Us Illustration">
+                        <img src="about_us.png" alt="About Us Illustration">
                     </div>
                 </div>
             </div>
