--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontak Kami - English Mastery Course</title>
+    <title>Kontak Kami - Arwan Edu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -123,8 +123,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/logo.png" alt="English Mastery Course Logo">
-                <h1>English Mastery Course</h1>
+                <img src="arwan_edu.jpg" alt="Arwan Edu Logo">
+                <h1>Arwan Edu</h1>
             </div>
             <nav>
                 <ul>
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 English Mastery Course. All rights reserved.</p>
+                <p>&copy; 2025 Arwan Edu. All rights reserved.</p>
             </div>
         </div>
     </footer>
