--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h3>Sejarah Kami</h3>
-                        <p>English Mastery Course didirikan pada tahun 2018 dengan visi untuk menyediakan pendidikan bahasa Inggris berkualitas tinggi yang mudah diakses oleh semua kalangan. Bermula dari sebuah les privat kecil, kami telah berkembang menjadi salah satu pusat kursus bahasa Inggris terkemuka di Jakarta, melayani ratusan siswa setiap tahunnya.</p>
+                        <p>Arwan Edu didirikan pada tahun 2018 dengan visi untuk menyediakan pendidikan bahasa Inggris berkualitas tinggi yang mudah diakses oleh semua kalangan. Bermula dari sebuah les privat kecil, kami telah berkembang menjadi salah satu pusat kursus bahasa Inggris terkemuka di Jakarta, melayani ratusan siswa setiap tahunnya.</p>
                         <p>Kami percaya bahwa penguasaan bahasa Inggris adalah kunci untuk membuka peluang global, baik dalam pendidikan, karier, maupun kehidupan pribadi. Oleh karena itu, kami berkomitmen untuk menciptakan lingkungan belajar yang inspiratif, interaktif, dan efektif.</p>
 
                         <h3>Visi & Misi</h3>
@@ -200,7 +200,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section about">
-                    <h3>English Mastery Course</h3>
+                    <h3>Arwan Edu</h3>
                     <p>Dedikasi kami untuk membantu Anda menguasai bahasa Inggris dengan metode efektif dan interaktif.</p>
                 </div>
                 <div class="footer-section contact-info">
