--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section about">
-                    <h3>English Mastery Course</h3>
+                    <h3>Arwan Edu</h3>
                     <p>Dedikasi kami untuk membantu Anda menguasai bahasa Inggris dengan metode efektif dan interaktif.</p>
                 </div>
                 <div class="footer-section contact-info">
