--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kursus Kami - English Mastery Course</title>
+    <title>Kursus Kami - Arwan Edu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 English Mastery Course. All rights reserved.</p>
+                <p>&copy; 2025 Arwan Edu. All rights reserved.</p>
             </div>
         </div>
     </footer>
