--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="footer-section maps">
                     <h3>Lokasi Kami</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1dXXXX.XXXX!2dXXXXXXXX!3dXXXXXXXX!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTPCsDQ5JzUyLjQiTiAxMDTCsDQ5JzU0LjQiRQ!5e0!3m2!1sen!2sid!4v1678901234567!5m2!1sen!2sid" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://maps.app.goo.gl/GYuiuoQrQiLELRKX8" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
             <div class="footer-bottom">
