--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="footer-section maps">
                     <h3>Lokasi Kami</h3>
-                    <iframe src="https://maps.app.goo.gl/GYuiuoQrQiLELRKX8" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d416.920579167653!2d106.95782680082965!3d-6.205632138915078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698b788b34c5bf%3A0x4df51d49bbc66d87!2sJl.%20Raya%20Rw.%20Kuning%20No.240%2C%20RT.1%2FRW.6%2C%20Pulo%20Gebang%2C%20Kec.%20Cakung%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013950!5e0!3m2!1sid!2sid!4v1751967741779!5m2!1sid!2sid" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
             <div class="footer-bottom">
