--- a/courses.html
+++ b/courses.html
@@ -90,8 +90,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/logo.png" alt="English Mastery Course Logo">
-                <h1>English Mastery Course</h1>
+                <img src="arwan_edu.jpg" alt="Arwan Edu Logo">
+                <h1>Arwan Edu</h1>
             </div>
             <nav>
                 <ul>
@@ -207,7 +207,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section about">
-                    <h3>English Mastery Course</h3>
+                    <h3>Arwan Edu</h3>
                     <p>Dedikasi kami untuk membantu Anda menguasai bahasa Inggris dengan metode efektif dan interaktif.</p>
                 </div>
                 <div class="footer-section contact-info">
