--- a/register.html
+++ b/register.html
@@ -86,8 +86,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="images/logo.png" alt="English Mastery Course Logo">
-                <h1>English Mastery Course</h1>
+                <img src="arwan_edu.jpg" alt="English Mastery Course Logo">
+                <h1>Arwan Edu</h1>
             </div>
             <nav>
                 <ul>
@@ -173,7 +173,7 @@
                     <h3>Kontak Kami</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Jl. Contoh No. 123, Jakarta Utara, Indonesia</p>
                     <p><i class="fas fa-phone"></i> <a href="tel:+628123456789">+62 812-3456-789</a></p>
-                    <p><i class="fas fa-envelope"></i> info@englishmastery.com</p>
+                    <p><i class="fas fa-envelope"></i> info@arwanedu.com</p>
                 </div>
                 <div class="footer-section social">
                     <h3>Ikuti Kami</h3>
