--- a/contact.html
+++ b/contact.html
@@ -177,8 +177,8 @@
                     <h3>Arwan Edu</h3>
                     <p>Komunitas yang mendedikasikan diri untuk menjembatani dunia industri dan pendidikan melalui kursus bahasa Inggris yang relevan dan praktis. Kami menghadirkan pengalaman nyata untuk mencetak generasi yang kompeten dan siap kerja.</p>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/arwanedu/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/people/Arwan-Edu/61578683195086/"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-whatsapp"></i></a>
                     </div>
