--- a/intermediate.html
+++ b/intermediate.html
@@ -168,10 +168,10 @@
                     <h3>Arwan Edu</h3>
                     <p>Komunitas yang mendedikasikan diri untuk menjembatani dunia industri dan pendidikan melalui kursus bahasa Inggris yang relevan dan praktis. Kami menghadirkan pengalaman nyata untuk mencetak generasi yang kompeten dan siap kerja.</p>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/arwanedu/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=61578683195086"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://wa.me/628123456789?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
