--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <p class="subtitle">Tonton video interaktif di bawah ini untuk memulai belajar dan meningkatkan
                         skill Anda!</p>
                     <div class="video-wrapper">
-                        <iframe src="https://www.youtube.com/live/HLloRsgQLE4?si=QcG5PZxjk5k1k83Y"
+                        <iframe src="https://www.youtube.com/embed/HLloRsgQLE4"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
