--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
                 <div class="english-video-panel">
                     <div class="english-main-video-player">
                         <iframe id="englishYoutubeVideoPlayer"
-                            src="http://googleusercontent.com/youtube.com/embed/sA-eN2G1BqA?autoplay=0&mute=1&controls=1&showinfo=0&rel=0&loop=1&playlist=sA-eN2G1BqA"
-                            frameborder="0"
+                            src="https://www.youtube.com/embed/HLloRsgQLE4"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin"
                             allowfullscreen></iframe>
