--- a/Kursus.html
+++ b/Kursus.html
@@ -140,8 +140,8 @@
                     <div class="social-icons">
                         <a href="https://www.instagram.com/arwanedu/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=61578683195086"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://wa.me/628123456789?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus."><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.youtube.com/@ArwanEdu"><i class="fab fa-youtube"></i></a>
+                        <a href="https://wa.me/6285798024920?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
@@ -187,7 +187,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/628123456789?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus." class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/6285798024920?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
