--- a/about.html
+++ b/about.html
@@ -171,8 +171,8 @@
                     <div class="social-icons">
                         <a href="https://www.instagram.com/arwanedu/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/profile.php?id=61578683195086"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://wa.me/628123456789?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus."><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.youtube.com/@ArwanEdu"><i class="fab fa-youtube"></i></a>
+                        <a href="https://wa.me/6285798024920?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus."><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
