--- a/basic.html
+++ b/basic.html
@@ -170,8 +170,8 @@
                     <div class="social-icons">
                         <a href="https://www.instagram.com/arwanedu/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.facebook.com/people/Arwan-Edu/61578683195086/"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://wa.me/628123456789?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus."><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.youtube.com/@ArwanEdu"><i class="fab fa-youtube"></i></a>
+                        <a href="https://wa.me/6285798024920?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus."><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
 
@@ -179,7 +179,7 @@
                     <h3>Navigasi</h3>
                     <ul>
                         <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                        <li><a href="courses.html"><i class="fas fa-book-open"></i> Kursus</a></li>
+                        <li><a href="Kursus.html"><i class="fas fa-book-open"></i> Kursus</a></li>
                         <li><a href="about.html"><i class="fas fa-users"></i> Tentang Kami</a></li>
                         <li><a href="contact.html"><i class="fas fa-phone-alt"></i> Kontak</a></li>
                         <li><a href="register.html"><i class="fas fa-user-plus"></i> Daftar / Login</a></li>
@@ -217,7 +217,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/628123456789?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus." class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/6285798024920?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus." class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
