--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
                     <h3>Kontak Kami</h3>
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Jakarta, Indonesia</li>
-                        <li><i class="fas fa-phone"></i> +62 812-3456-789</li>
+                        <li><i class="fas fa-phone"></i> +62 857-9802-4920</li>
                         <li><a href="mailto:info@arwanedu.com"><i class="fas fa-envelope"></i> info@arwanedu.com</a></li>
                         <li><i class="fas fa-clock"></i> Senin - Jumat: 09:00 - 18:00 WIB</li>
                     </ul>
@@ -204,7 +204,7 @@
                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d416.920579167653!2d106.95782680082965!3d-6.205632138915078!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698b788b34c5bf%3A0x4df51d49bbc66d87!2sJl.%20Raya%20Rw.%20Kuning%20No.240%2C%20RT.1%2FRW.6%2C%20Pulo%20Gebang%2C%20Kec.%20Cakung%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013950!5e0!3m2!1sid!2sid!4v1751967741779!5m2!1sid!2sid" class="map-frame" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                            </a>
                     </div>
-                    <address>Jl. Contoh No. 123, Jakarta Utara, Indonesia</address>
+                    <address>Jl. Raya Halim Perdanakusuma No.1, RT.1/RW.9, Halim Perdanakusuma, Kec. Makasar, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13610, Indonesia</address>
                 </div>
             </div>
             
@@ -218,7 +218,7 @@
         </div>
     </footer>
     
-    <a href="https://wa.me/628123456789?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus." class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/6285798024920?text=Halo%20Arwan%20Edu,%20saya%20ingin%20bertanya%20tentang%20kursus." class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
