--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <div class="footer-map-section">
                     <h3>Lokasi Kami</h3>
                     <div class="map-wrapper">
-                        <a href="https://maps.app.goo.gl/V5DDmDRx35inEFzbA" target="_blank" class="map-link">
+                        <a href="https://maps.app.goo.gl/idPbvmRMkVBFS56d9" target="_blank" class="map-link">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.008238299948!2d106.88538491120921!3d-6.2626440936997865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f2e75d5cb443%3A0xf3559c7fdfae6cda!2sUniversitas%20Dirgantara%20Marsekal%20Suryadarma%2C%20Kampus%20A!5e0!3m2!1sid!2sus!4v1753605424805!5m2!1sid!2sus" class="map-frame" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                     <address>Jl. Raya Halim Perdanakusuma No.1, RT.1/RW.9, Halim Perdanakusuma, Kec. Makasar, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13610, Indonesia</address>
