--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                             <p class="quote-text">"Sangat puas dengan kualitas kursus di Arwan Edu. Pengajarnya
                                 interaktif dan materi disampaikan dengan sangat jelas. Rekomendasi!"</p>
                             <div class="user-info">
-                                <img src="images/avatar-john.jpg" alt="John Doe">
+                                <img src="senaka.svg" alt="John Doe">
                                 <div class="text-info">
-                                    <h4>John Doe</h4>
+                                    <h4>Senaka</h4>
                                     <p class="role">Mahasiswa</p>
                                 </div>
                             </div>
@@ -158,9 +158,9 @@
                                 sangat aplikatif. Bukan teori kosong, tapi pengalaman nyata di lapangan. Sangat
                                 membantu!"</p>
                             <div class="user-info">
-                                <img src="images/avatar-rina.jpg" alt="Rina Mulyani">
+                                <img src="clausie.svg" alt="Rina Mulyani">
                                 <div class="text-info">
-                                    <h4>Rina Mulyani</h4>
+                                    <h4>Clausie</h4>
                                     <p class="role">HR Manager</p>
                                 </div>
                             </div>
@@ -175,9 +175,9 @@
                                 untuk strategi bisnis kami. Kami dapat solusi yang konkret, bukan sekadar saran umum."
                             </p>
                             <div class="user-info">
-                                <img src="images/avatar-budi.jpg" alt="Budi Santosa">
+                                <img src="punipun.svg" alt="Budi Santosa">
                                 <div class="text-info">
-                                    <h4>Budi Santosa</h4>
+                                    <h4>Clarissa Widjaya</h4>
                                     <p class="role">CEO EduTech Startup</p>
                                 </div>
                             </div>
@@ -192,9 +192,9 @@
                                 benar-benar ahli. Materinya ringkas, jelas, dan langsung bisa diterapkan di proyek
                                 saya."</p>
                             <div class="user-info">
-                                <img src="images/avatar-andi.jpg" alt="Andi Wijaya">
+                                <img src="matcha-mei.svg" alt="Andi Wijaya">
                                 <div class="text-info">
-                                    <h4>Andi Wijaya</h4>
+                                    <h4>Matcha Mei</h4>
                                     <p class="role">Mahasiswa Pascasarjana</p>
                                 </div>
                             </div>
